	* CORE: Added support for BYTE_ARRAY and STRING_BYTE_ARRAY data type to be ids and have default values.  Thanks noordawod.
	* CORE: Added support for table aliasing.  Thanks much to p91paul.
	* CORE: Added table-name for many ConnectionSource methods to allow partitioning and other per-table operations.
	* CORE: Fixed (really) QueryBuilder.orderByRaw(...) and orderBy(...) mutually exclusivity. Thanks to Diederik. Bug #161.
	* CORE: Fixed a bug when we select columns on an entity without an id field.  Thanks to lder.
	* CORE: Fixed a bug with building queries using selectRaw(...).  Bug #166.
	* CORE: Fixed the javax.persistence annotation processing and revamped it to use the annotations directly.
	* CORE: Fixed bug with UpdateBuilder methods returning wrong type.  Thanks to Joseph Jones.  Bug #180.
	* CORE: Fixed bug with the raw results that they are not obeying the AS SQL.  Thanks to nonameplum.  Bug #183.
	* CORE: Fixed bug with ISNULL and ISNOTNULL which weren't working with serializable.  Thanks to andrew8er.  Bug #185.
	* CORE: Fixed bug with dao.update() not setting the dao on BaseDaoEnabled instances. Thanks to Carlos Fonseca. Bug #177.
	* CORE: Fixed bug where dao.deleteById(...) was not being properly notified. Thanks to Daniel Jette. Bug #190.
	* CORE: Fixed bug where useGetSet did not understand isXxx() for boolean fields. Thanks to HeDYn. Bug #187.
	* CORE: Fixed finding of get/set/is methods if not in English locale.  Thanks to Christian Ruppert.  Bug #191.
	* CORE: Fixed bug with Doa.createOrUpdate(...) and custom id types.  Thanks much to lstrzelecki.  Bug #193.
	* CORE: Fixed some problems with default-value parsing and handing with some complex types.
	* CORE: Fixed synchronization problems with single connection ConnectionSource and Dao.callBatchTasks().  Bug #195.
	* CORE: Fixed bad bug where max-auto-refresh value enabled auto-refresh when programmatically configured.  Bug #196.