@@ -116,4 +116,9 @@ public interface DataPersister extends FieldConverter {
 	 * Move the current-value to the next value. Used for the version field.
 	 */
 	public Object moveToNextValue(Object currentValue) throws SQLException;
+
+	/**
+	 * Get the type that should be used when defining this 
+	 */
+	public String getSqlOtherType();
 }
