@@ -158,6 +158,11 @@ public class H2DatabaseResults implements DatabaseResults {
 	}
 
 	@Override
+	public Object getObject(int columnIndex) throws SQLException {
+		return resultSet.getObject(columnIndex + 1);
+	}
+
+	@Override
 	public boolean wasNull(int columnIndex) throws SQLException {
 		return resultSet.wasNull();
 	}
